[gd_scene load_steps=18 format=3 uid="uid://cr4ef5ixo8gx6"]

[ext_resource type="FontFile" uid="uid://cxj4r3heum57y" path="res://assets/fonts/pixelify/PixelifySans-Regular.ttf" id="1_nw6ox"]
[ext_resource type="Script" path="res://scripts/ui.gd" id="1_u7wum"]
[ext_resource type="FontFile" uid="uid://dwg78iqde6ctc" path="res://assets/fonts/pixelify/PixelifySans-Bold.ttf" id="3_vfjoi"]

[sub_resource type="LabelSettings" id="LabelSettings_waqne"]
font = ExtResource("3_vfjoi")
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_gpfop"]
font = ExtResource("1_nw6ox")
font_size = 72

[sub_resource type="LabelSettings" id="LabelSettings_jnnse"]
font = ExtResource("1_nw6ox")
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_78qpf"]
font = ExtResource("3_vfjoi")
font_size = 70

[sub_resource type="LabelSettings" id="LabelSettings_g5d5o"]
font = ExtResource("1_nw6ox")
font_size = 72

[sub_resource type="LabelSettings" id="LabelSettings_slhd0"]
font = ExtResource("3_vfjoi")
font_size = 100

[sub_resource type="LabelSettings" id="LabelSettings_fv0x8"]
font = ExtResource("1_nw6ox")
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_b4kbv"]
font = ExtResource("3_vfjoi")
font_size = 92

[sub_resource type="LabelSettings" id="LabelSettings_2h54g"]
font = ExtResource("1_nw6ox")
font_size = 32

[sub_resource type="Animation" id="Animation_157py"]
resource_name = "win"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/In Game UI/Bottom Bar/Win Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667, 0.4, 0.433333, 0.466667, 0.5, 0.533333, 0.566667, 0.6, 0.633333, 0.666667, 0.7, 0.733333, 0.766667, 0.8, 0.833333, 0.866667, 0.9, 0.933333, 0.966667, 1, 1.03333, 1.06667, 1.1, 1.13333, 1.16667, 1.2, 1.23333, 1.26667, 1.3, 1.33333, 1.36667, 1.4, 1.43333, 1.46667, 1.5, 1.53333, 1.56667, 1.6, 1.63333, 1.66667, 1.7, 1.73333, 1.76667, 1.8, 1.83333, 1.86667, 1.9, 1.93333, 1.96667, 2, 2.03333, 2.06667, 2.1, 2.13333, 2.16667, 2.2, 2.23333, 2.26667, 2.3, 2.33333, 2.36667, 2.4, 2.43333, 2.46667, 2.5, 2.53333, 2.56667, 2.6, 2.63333, 2.66667, 2.7, 2.73333, 2.76667, 2.8, 2.83333, 2.86667, 2.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.0185185), Color(1, 1, 1, 0.148148), Color(1, 1, 1, 0.5), Color(1, 1, 1, 0.851852), Color(1, 1, 1, 0.981481), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0.994513), Color(1, 1, 1, 0.956104), Color(1, 1, 1, 0.851852), Color(1, 1, 1, 0.648835), Color(1, 1, 1, 0.351167), Color(1, 1, 1, 0.148149), Color(1, 1, 1, 0.043896), Color(1, 1, 1, 0.00548702), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_p17n6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/In Game UI/Bottom Bar/Win Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/In Game UI/Top Bar/X turns:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-300, 144)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/In Game UI/Top Bar/O turns:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(260, 144)]
}

[sub_resource type="Animation" id="Animation_ykko4"]
resource_name = "x_score"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/In Game UI/Top Bar/X turns:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-300, 144), Vector2(-300, 140.444), Vector2(-300, 123.556), Vector2(-300, 120), Vector2(-300, 120), Vector2(-300, 144)]
}

[sub_resource type="Animation" id="Animation_ve26n"]
resource_name = "o_score"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/In Game UI/Top Bar/O turns:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(260, 144), Vector2(260, 140.444), Vector2(260, 123.556), Vector2(260, 120), Vector2(260, 120), Vector2(260, 144)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v6udp"]
_data = {
"RESET": SubResource("Animation_p17n6"),
"o_score": SubResource("Animation_ve26n"),
"win": SubResource("Animation_157py"),
"x_score": SubResource("Animation_ykko4")
}

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_u7wum")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="ColorRect" type="ColorRect" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.254902, 0.654902, 1, 1)

[node name="In Game UI" type="Control" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Top Bar" type="Control" parent="Control/In Game UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_top = 88.0
offset_bottom = 88.0
grow_horizontal = 2

[node name="Restart" type="Button" parent="Control/In Game UI/Top Bar"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -116.0
offset_top = 112.0
offset_right = 116.0
offset_bottom = 183.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_nw6ox")
theme_override_font_sizes/font_size = 52
text = "RESTART"

[node name="Menu Button" type="Button" parent="Control/In Game UI/Top Bar"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -66.5
offset_top = 24.0
offset_right = 66.5
offset_bottom = 95.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_nw6ox")
theme_override_font_sizes/font_size = 42
text = "MENU"

[node name="X turns" type="Label" parent="Control/In Game UI/Top Bar"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 144.0
offset_right = -260.0
offset_bottom = 221.0
grow_horizontal = 2
text = "0"
label_settings = SubResource("LabelSettings_waqne")
horizontal_alignment = 1

[node name="O turns" type="Label" parent="Control/In Game UI/Top Bar"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 260.0
offset_top = 144.0
offset_right = 300.0
offset_bottom = 221.0
grow_horizontal = 2
text = "0"
label_settings = SubResource("LabelSettings_waqne")
horizontal_alignment = 1

[node name="X Label" type="Label" parent="Control/In Game UI/Top Bar"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -301.0
offset_top = 64.0
offset_right = -259.0
offset_bottom = 152.0
grow_horizontal = 2
text = "X"
label_settings = SubResource("LabelSettings_gpfop")

[node name="O Label" type="Label" parent="Control/In Game UI/Top Bar"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 258.0
offset_top = 64.0
offset_right = 300.0
offset_bottom = 152.0
grow_horizontal = 2
text = "O"
label_settings = SubResource("LabelSettings_gpfop")

[node name="Turn Label" type="Label" parent="Control/In Game UI/Top Bar"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -76.0
offset_top = 200.0
offset_right = 76.0
offset_bottom = 277.0
grow_horizontal = 2
text = "RUCH"
label_settings = SubResource("LabelSettings_jnnse")
horizontal_alignment = 1

[node name="Turn" type="Label" parent="Control/In Game UI/Top Bar/Turn Label"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -21.0
offset_top = 48.0
offset_right = 21.0
offset_bottom = 133.0
grow_horizontal = 2
text = "O"
label_settings = SubResource("LabelSettings_78qpf")
horizontal_alignment = 1

[node name="Bottom Bar" type="Control" parent="Control/In Game UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="Win Label" type="Label" parent="Control/In Game UI/Bottom Bar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -158.0
offset_top = -340.0
offset_right = 158.0
offset_bottom = -252.0
grow_horizontal = 2
grow_vertical = 2
text = "WYGRYWA"
label_settings = SubResource("LabelSettings_g5d5o")
horizontal_alignment = 1

[node name="Winner" type="Label" parent="Control/In Game UI/Bottom Bar/Win Label"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = 28.0
offset_right = 30.0
offset_bottom = 148.0
grow_horizontal = 2
grow_vertical = 2
text = "X"
label_settings = SubResource("LabelSettings_slhd0")
horizontal_alignment = 1

[node name="MainMenu" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubTitle" type="Label" parent="Control/MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -252.0
offset_top = -430.5
offset_right = 12.0
offset_bottom = -353.5
grow_horizontal = 2
grow_vertical = 2
text = "INFINITE"
label_settings = SubResource("LabelSettings_fv0x8")

[node name="Title" type="Label" parent="Control/MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -254.0
offset_top = -367.5
offset_right = 254.0
offset_bottom = -256.5
grow_horizontal = 2
grow_vertical = 2
text = "TIC TAC TOE"
label_settings = SubResource("LabelSettings_b4kbv")

[node name="Start Button" type="Button" parent="Control/MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -265.5
offset_top = -75.0
offset_right = 265.5
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_nw6ox")
theme_override_font_sizes/font_size = 82
text = "Rozpocznij"

[node name="Version" type="Label" parent="Control/MainMenu"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -111.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 0
text = "Version 0.0.1"
label_settings = SubResource("LabelSettings_2h54g")
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_v6udp")
}

[connection signal="pressed" from="Control/In Game UI/Top Bar/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Control/In Game UI/Top Bar/Menu Button" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="Control/MainMenu/Start Button" to="." method="_on_start_button_pressed"]
